--- a/style.css
+++ b/style.css
@@ -473,6 +473,14 @@ margin: 40px 1190px 20px 0px;
 .book-name {
     text-transform: uppercase;
     letter-spacing: 1.8px;
+    color: #000;
+font-family: Inter;
+font-size: 15px;
+font-style: normal;
+font-weight: 700;
+line-height: 40px; /* 266.667% */
+letter-spacing: 2px;
+text-transform: uppercase;
 }
 .book-author{
     color: #000;
