--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ display: inline;
     max-width: 1440px;
     min-height: 600px;
     background-image: linear-gradient(180deg, #0C0C0E 0%, #0C0C0E 0.01%, rgba(18, 18, 21, 0.10) 100%), url("./assets/welcome.jpg");
+    background-image: linear-gradient(180deg, #0C0C0E 0%, #0C0C0E 0.01%, rgba(18, 18, 21, 0.10) 100%), url("");
     background-size: cover;
     background-position: center;
 }
