--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    max-width: 1440px;
 
 }
 .container{max-width: 1440px;
